blog part updated

--- a/blog.html
+++ b/blog.html
@@ -22,13 +22,10 @@
                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <strong>This is the first item's accordion body.</strong> It is shown by default, until the
-                        collapse
-                        plugin adds the appropriate classes that we use to style each element. These classes control the
-                        overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of
-                        this with custom CSS or overriding our default variables. It's also worth noting that just about
-                        any
-                        HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        <strong>The differences between Local Storage and Session Storage are:</strong> data stored in
+                        local storage have no expiration. On the other hand, data stored in session storage expires
+                        after the user switches the tab or close the browser.If we want to store data in client-side
+                        then local storage is used and if we store data in server side we use session storage.
                     </div>
                 </div>
             </div>
@@ -42,14 +39,14 @@
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that
-                        just about any HTML can go within the <code>.accordion-body</code>, though the transition does
-                        limit
-                        overflow.
+                        <strong>The scope of a variable defines from where we can access it in a program based on where
+                            it
+                            was created.</strong> Global scope contains all of the things that are defined outside of
+                        all code
+                        blocks. A global variable has global scope. A global variable can be accessed from anywhere in
+                        the
+                        code. On the other hand, Block scope contains things that are defined inside code blocks. A
+                        local variable is only accessible where it is declared.
                     </div>
                 </div>
             </div>
