Answers edited in blog

--- a/blog.html
+++ b/blog.html
@@ -60,14 +60,10 @@
                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that
-                        just about any HTML can go within the <code>.accordion-body</code>, though the transition does
-                        limit
-                        overflow.
+                        <strong>The JS event loop monitors the call stack and call back queue.</strong> This is the one
+                        task that the event loop handles. At first, it
+                        executes all the tasks in the call stack. If the call stack is empty,then it will take the first
+                        task from the callback queue and then push it to the call stack and eventually executes it.
                     </div>
                 </div>
             </div>
@@ -81,14 +77,12 @@
                 <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that
-                        just about any HTML can go within the <code>.accordion-body</code>, though the transition does
-                        limit
-                        overflow.
+                        <strong>There are a few ways to get undefined value in Javscript.</strong> A variable without
+                        any
+                        value assigned or not declared is undefined type. If we call a non-existend property we get
+                        undefined value. If we call a function with multiple parameters and don't pass the value for the
+                        arguments,then the parameters inside the function will be undefined.
+                        A function that doesn’t have a return statement returns undefined.
                     </div>
                 </div>
             </div>
