--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="bg-dark">
     <div class="container mt-5">
         <div class="accordion" id="accordionExample">
             <div class="accordion-item">
